* Modified `limit()`, `skip()`, range()` in `repeat()` to track per-iteration counters.
* Moved `Traverser` loop logic into new interface `NL_SL_Traverser` and changed loop-supporting `Traverser`s to extend the common interface.
* Fixed `sample()` in `repeat()` computer algorithm to retain the configured sample size per loop

==== Bugs

* TINKERPOP-2971 having order() before fold() omits an empty list in GroupStep's value traversal
* TINKERPOP-3047 Grammar does not parse keywords into Map keys
* TINKERPOP-3067 gremlin-shaded incomplete shading due to Jackson multi-release classes
* TINKERPOP-3100 Traversal.Admin.lock() has excessive recursion
* TINKERPOP-3135 Gremlin Console complains about missing plugins field
* TINKERPOP-3181 Allow Client initialization to succeed even if minPoolSize is not met
* TINKERPOP-3201 Fix tail inside repeat
* TINKERPOP-3211 Server does not start when using gremlin-server-secure.yaml sample config

==== Improvements

* TINKERPOP-3175 Add boolean conversion step asBool()
* TINKERPOP-2491 Improve consistency of the output of range() oriented steps *(breaking)*
* TINKERPOP-2821 Examine use of Tokens.ARGS_HOST as part of a RequestMessage
* TINKERPOP-2940 Strategy Dependent Behavior of Ternary Boolean Logic *(breaking)*
* TINKERPOP-2974 `valueMap` step returns properties in random order
* TINKERPOP-3017 Simplify TraversalSource creation from AnonymousTraversalSource *(breaking)*
* TINKERPOP-3046 Make new keyword optional in Gremlin grammar
* TINKERPOP-3055 withoutStrategies() mechanism in programming languages for providers
* TINKERPOP-3083 The split() step should provide a way to split an entire string *(breaking)*
* TINKERPOP-3115 Better handle overflows with sum() *(breaking)*
* TINKERPOP-3121 Multiple by() modulators lead to unexpected behavior *(breaking)*
* TINKERPOP-3143 gremlin-javascript should default to GraphBinary
* TINKERPOP-3147 Prevent aggregate step from having multiple by modulators *(breaking)*